# ADGENCOV

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  DEPLOY.md  DEPLOY_NOTES.md  Dockerfile  LICENSE  README.md  bench_speed.py  railway.json
.github/workflows/: bench.yml  ci.yml
bindings/: CMakeLists.txt  adgencov_py.cpp
cli/: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake
include/adgencov/: clustering.hpp  groups.hpp  io.hpp  preprocess.hpp  projection.hpp  select.hpp  shrink.hpp
python/: README.md  pyproject.toml
python/adgencov/: __init__.py  biocache.py  bioquery.py  export.py  figure.py  geo.py  multi.py  pipeline.py  stringdb.py
python/adgencov/api/: __init__.py  app.py  jobs.py  models.py  service.py
python/adgencov/api/static/: app.js  index.html  styles.css
results/: bench-20260707T191753Z-db2ec9d7.txt
scripts/: bench_selection.py  paper_figure1.py  paper_gse52778.py  smoke_gui.sh
src/: CMakeLists.txt
src/adgencov/: clustering.cpp  groups.cpp  io.cpp  preprocess.cpp  projection.cpp  select.cpp  shrink.cpp
tests/: CMakeLists.txt  adtarget_ref.py  gen_golden.py  gen_golden_clustering.py  gen_golden_pipeline.py  gen_golden_select.py  golden_clustering.hpp  golden_pipeline.hpp  golden_select.hpp  golden_shrink.hpp  test_api.py  test_bindings.py  test_bio_symbols.py  test_bioquery.py  test_clustering.cpp  test_dashboard.py  test_geo.py  test_io.cpp  test_pipeline.cpp  test_projection.cpp  test_select.cpp  test_shrink.cpp
tests/fixtures/: expr_fixture.tsv  geo_series_matrix.txt  geo_supp_counts.csv  geo_supp_deseq2_annot.txt  geo_supp_fpkm_matrix.txt  group_map_fixture.tsv
tests/fixtures/bioquery/: esearch_gds.json  esummary_gds.json  uniprot_acc.json  uniprot_gene.json  uniprot_geneid.json
